// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkList /> renders LinkList correctly when its open 1`] = `
<div
  class="sc-bdVaJa links links__list bhMvGM"
>
  <div
    class="sc-bwzfXH bQTlgY"
  >
    <div
      class="links__list__item--selected sc-bxivhb links__list__item drwIGv"
    >
      USA (English)
    </div>
    <div
      class="sc-bxivhb links__list__item drwIGv"
    >
      Canada (English)
    </div>
    <div
      class="sc-bxivhb links__list__item drwIGv"
    >
      Canada (Français)
    </div>
  </div>
</div>
`;

exports[`<LinkList /> renders LinkList correctly with list items as links 1`] = `
<div
  class="sc-bdVaJa links links__list bhMvGM"
>
  <div
    class="sc-bwzfXH bQTlgY"
  >
    <a
      class="sc-ifAKCX links__list__item jbGTXu"
      href="/"
    >
      USA (English)
    </a>
    <a
      class="sc-ifAKCX links__list__item jbGTXu"
      href="/"
    >
      Canada (English)
    </a>
    <a
      class="sc-ifAKCX links__list__item jbGTXu"
      href="/"
    >
      Canada (Français)
    </a>
  </div>
</div>
`;

exports[`<LinkList /> renders content after container 1`] = `
<div
  class="sc-bdVaJa links links__list bhMvGM"
>
  <div
    class="wrapper--has-after sc-bwzfXH bQTlgY"
  >
    <a
      class="sc-ifAKCX links__list__item jbGTXu"
      href="/"
    >
      USA (English)
    </a>
    <a
      class="sc-ifAKCX links__list__item jbGTXu"
      href="/"
    >
      Canada (English)
    </a>
    <a
      class="sc-ifAKCX links__list__item jbGTXu"
      href="/"
    >
      Canada (Français)
    </a>
  </div>
  <div
    class="sc-htpNat zcngC"
  >
    <span>
      after content
    </span>
  </div>
</div>
`;
